crates/parser/tests/parse/exports-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..219
  MODULE@0..218
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_EXPORT@10..26
      L_PAREN@10..11 "("
      KEYWORD@11..17 "export"
      WHITESPACE@17..18 " "
      NAME@18..20
        STRING@18..20 "\"\""
      WHITESPACE@20..21 " "
      ERROR@21..22 "("
      ERROR@22..24 "fu"
      ERROR@24..25 ")"
      R_PAREN@25..26 ")"
    WHITESPACE@26..29 "\n  "
    MODULE_FIELD_EXPORT@29..49
      L_PAREN@29..30 "("
      KEYWORD@30..36 "export"
      WHITESPACE@36..37 " "
      NAME@37..39
        STRING@37..39 "\"\""
      WHITESPACE@39..40 " "
      EXTERN_IDX_FUNC@40..48
        L_PAREN@40..41 "("
        KEYWORD@41..45 "func"
        WHITESPACE@45..46 " "
        ERROR@46..47 "$"
        R_PAREN@47..48 ")"
      R_PAREN@48..49 ")"
    WHITESPACE@49..52 "\n  "
    MODULE_FIELD_EXPORT@52..63
      L_PAREN@52..53 "("
      KEYWORD@53..59 "export"
      WHITESPACE@59..60 " "
      NAME@60..62
        STRING@60..62 "\"\""
      R_PAREN@62..63 ")"
    WHITESPACE@63..66 "\n  "
    MODULE_FIELD_EXPORT@66..84
      L_PAREN@66..67 "("
      KEYWORD@67..73 "export"
      WHITESPACE@73..74 " "
      NAME@74..76
        STRING@74..76 "\"\""
      WHITESPACE@76..77 " "
      EXTERN_IDX_FUNC@77..83
        L_PAREN@77..78 "("
        KEYWORD@78..82 "func"
        R_PAREN@82..83 ")"
      R_PAREN@83..84 ")"
    WHITESPACE@84..87 "\n  "
    MODULE_FIELD_EXPORT@87..102
      L_PAREN@87..88 "("
      KEYWORD@88..94 "export"
      WHITESPACE@94..95 " "
      EXTERN_IDX_FUNC@95..101
        L_PAREN@95..96 "("
        KEYWORD@96..100 "func"
        R_PAREN@100..101 ")"
      R_PAREN@101..102 ")"
    WHITESPACE@102..105 "\n  "
    MODULE_FIELD_FUNC@105..120
      L_PAREN@105..106 "("
      KEYWORD@106..110 "func"
      WHITESPACE@110..111 " "
      EXPORT@111..119
        L_PAREN@111..112 "("
        KEYWORD@112..118 "export"
        R_PAREN@118..119 ")"
      R_PAREN@119..120 ")"
    WHITESPACE@120..123 "\n  "
    MODULE_FIELD_FUNC@123..142
      L_PAREN@123..124 "("
      KEYWORD@124..128 "func"
      WHITESPACE@128..129 " "
      EXPORT@129..141
        L_PAREN@129..130 "("
        KEYWORD@130..136 "export"
        WHITESPACE@136..137 " "
        ERROR@137..140 "$xx"
        R_PAREN@140..141 ")"
      R_PAREN@141..142 ")"
    WHITESPACE@142..145 "\n  "
    MODULE_FIELD_FUNC@145..173
      L_PAREN@145..146 "("
      KEYWORD@146..150 "func"
      WHITESPACE@150..151 " "
      EXPORT@151..172
        L_PAREN@151..152 "("
        KEYWORD@152..158 "export"
        WHITESPACE@158..159 " "
        ERROR@159..164 "\"func"
        WHITESPACE@164..167 "\n  "
        ERROR@167..168 "\""
        WHITESPACE@168..171 "\n  "
        R_PAREN@171..172 ")"
      R_PAREN@172..173 ")"
    WHITESPACE@173..176 "\n  "
    MODULE_FIELD_FUNC@176..216
      L_PAREN@176..177 "("
      KEYWORD@177..181 "func"
      WHITESPACE@181..182 " "
      IMPORT@182..201
        L_PAREN@182..183 "("
        KEYWORD@183..189 "import"
        WHITESPACE@189..190 " "
        MODULE_NAME@190..195
          STRING@190..195 "\"env\""
        WHITESPACE@195..196 " "
        NAME@196..200
          STRING@196..200 "\"f1\""
        R_PAREN@200..201 ")"
      WHITESPACE@201..202 " "
      EXPORT@202..215
        L_PAREN@202..203 "("
        KEYWORD@203..209 "export"
        WHITESPACE@209..210 " "
        NAME@210..214
          STRING@210..214 "\"f3\""
        R_PAREN@214..215 ")"
      R_PAREN@215..216 ")"
    WHITESPACE@216..217 "\n"
    R_PAREN@217..218 ")"
  WHITESPACE@218..219 "\n"

error: expected export descriptor
  ┌─ exports-malformed.wat:2:14
  │
2 │   (export "" (fu))
  │              ^

error: unexpected token
  ┌─ exports-malformed.wat:2:15
  │
2 │   (export "" (fu))
  │               ^^

error: unexpected token
  ┌─ exports-malformed.wat:2:17
  │
2 │   (export "" (fu))
  │                 ^

error: unexpected token
  ┌─ exports-malformed.wat:3:20
  │
3 │   (export "" (func $))
  │                    ^

error: expected export descriptor
  ┌─ exports-malformed.wat:4:13
  │
4 │   (export "")
  │             ^

error: expected index
  ┌─ exports-malformed.wat:5:19
  │
5 │   (export "" (func))
  │                   ^

error: expected export name
  ┌─ exports-malformed.wat:6:11
  │
6 │   (export (func))
  │           ^

error: expected index
  ┌─ exports-malformed.wat:6:16
  │
6 │   (export (func))
  │                ^

error: expected export name
  ┌─ exports-malformed.wat:7:16
  │
7 │   (func (export))
  │                ^

error: expected string
  ┌─ exports-malformed.wat:8:17
  │
8 │   (func (export $xx))
  │                 ^^^

error: expected export name
  ┌─ exports-malformed.wat:8:20
  │
8 │   (func (export $xx))
  │                    ^

error: unterminated string
  ┌─ exports-malformed.wat:9:17
  │
9 │   (func (export "func
  │                 ^^^^^

error: unterminated string
   ┌─ exports-malformed.wat:10:3
   │
10 │   "
   │   ^

error: expected export name
   ┌─ exports-malformed.wat:11:3
   │
11 │   ))
   │   ^

error: export must come before import
   ┌─ exports-malformed.wat:12:30
   │
12 │   (func (import "env" "f1") (export "f3"))
   │                              ^^^^^^
